--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "understanding-ts",
   "version": "1.0.0",
-  "description": "",
+  "description": "tsc.cmd app.ts",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server"
   },
-  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pankajpreet/learn-ts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pankajpreet/learn-ts/issues"
+  },
+  "homepage": "https://github.com/pankajpreet/learn-ts#readme",
   "devDependencies": {
-    "lite-server": "^2.5.4"
+    "lite-server": "^2.6.1"
   }
 }
