--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "webpack-dev-server"
   },
   "license": "ISC",
   "repository": {
@@ -17,6 +17,17 @@
   },
   "homepage": "https://github.com/pankajpreet/learn-ts#readme",
   "devDependencies": {
-    "lite-server": "^2.6.1"
+    "@types/lodash": "^4.17.1",
+    "lite-server": "^2.6.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "axios": "^1.6.8",
+    "fabric": "^6.0.0-rc1",
+    "lodash": "^4.17.21"
   }
 }
